# TowerBot

./: .env.example  .gitignore  ARCHITECTURE.md  LICENSE  README.md  SOUL.md  agent.py  check_memories.py  conftest.py  context.yaml  db.py  launch.py  legacy_privybot.py  memory.py  model_manager.py  privybot.py  pyproject.toml  query  requirements.txt  router.py  seed.py  temp_check_bypass_cache.py  temp_check_deleted.py  temp_check_raw.py  temp_list_tasklists.py  temp_verify_delete.py  test_autonomous_field.py  test_briefing.py  transport.py  verify_result.txt
.windsurf/: rules.md
api/: __init__.py  _base.py  _handler.py
bot/: agent.py  approval_router.py  autonomous.py  formatter.py  memory.py  model_helpers.py  model_manager.py  ralph.py  report.py  router.py  router_ai.py  scheduler.py  task_runner.py  thinking.py  transport.py
config/: .env.example  comment_templates.yaml  context.yaml  goals.yaml  model_registry.yaml  plans.yaml  providers.yaml  routes.yaml  task_templates.yaml  task_types.yaml  tasks.yaml  timeouts.yaml
core/: __init__.py  agent.py  cache.py  db.py  memory.py  model_manager.py  polling.py  rate_limits.py  report.py  router.py  scheduler.py  transport.py
docs/: ARCHITECTURE.md  ROADMAP.md  SDD_Personal_Tasks.md  SDD_db_layer.md  TOOLS.md  TOOLS_SDD.md  TOWER_DEPLOY.md  VISION.md
infra/: cache.py  memory_manager.py  model_router.py  polling.py  prompts.py  rate_limits.py  utils.py
scripts/: backfill_comments.py  check_null_tasks.py  clean_legacy_tasks.py  cleanup_test_data.py  deploy.py  mcp_proxy_wrapper.py  mcp_stdio_proxy.py  seed.py  (+8 more)
(+316 files in other folders)
