[project]
name = "privybot"
version = "0.1.0"
description = "Robert Floyd Dugger's personal AI assistant — single-file Telegram bot on OpenRouter."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12,<3.13"
dependencies = [
    "python-telegram-bot>=21.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",
    "requests>=2.31.0",
    "loguru>=0.7.0",
    "rich>=13.0.0",
]

[project.scripts]
privybot = "privybot:main"

[tool.uv]
package = false
