[project]
name = "privybot"
version = "0.1.0"
description = "Robert Floyd Dugger's personal AI assistant — single-file Telegram bot on OpenRouter."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12,<3.13"
dependencies = [
    "python-telegram-bot>=21.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "loguru>=0.7.0",
    "rich>=13.0.0",
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "google-auth-httplib2>=0.1.0",
    "google-api-python-client>=2.0.0",
    "ddgs>=6.0.0",
    "apscheduler>=3.10.4,<4.0",
    "beautifulsoup4>=4.9.0",
    "pytz>=2024.0",
    "openagent-directive>=0.2.2",
    "psutil>=7.2.2",
    "chromadb>=1.5.9",
    "ollama>=0.6.2",
]

[project.scripts]
privybot = "privybot:main"

[tool.uv]
package = false

[tool.uv.sources]
openagent-directive = { path = "../OpenAgent", editable = true }
